feat: link form builder package

--- a/src/docs/5.28.x/overview/applications/form-builder.mdx
+++ b/src/docs/5.28.x/overview/applications/form-builder.mdx
@@ -3,7 +3,7 @@ title: Form Builder
 description: No-code form builder. Build forms in minutes using a drag&drop interface.
 ---
 
-import { Alert } from '@/components/Alert'
+import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -43,7 +43,7 @@ With validators you can prevent users from submitting the form with invalid data
 
 To add a form to a page, in the Page Builder editor there is a built-in element that you just drag and drop to any page where you want your form to appear. It’s an end-to-end no-code experience.
 
-For more advanced use-cases we provide a React library that you can use to render your forms on any React-based site. And for even more advanced cases, we expose a Form Builder API through which you can retrieve the from as a JSON data structure.
+For more advanced use-cases we provide a [React library](https://github.com/webiny/webiny-js/tree/next/packages/app-form-builder) that you can use to render your forms on any React-based site. And for even more advanced cases, we expose a Form Builder API through which you can retrieve the from as a JSON data structure.
 
 ### Themes
 
