--- a/src/docs/5.28.x/overview/applications/form-builder.mdx
+++ b/src/docs/5.28.x/overview/applications/form-builder.mdx
@@ -3,7 +3,7 @@ title: Form Builder
 description: No-code form builder. Build forms in minutes using a drag&drop interface.
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from '@/components/Alert'
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
