--- a/src/docs/shared/release-notes/5.30.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.30.0/changelog.mdx
@@ -4,8 +4,8 @@ title: Webiny 5.30.0 Changelog
 description: See what's new in Webiny version 5.30.0.
 ---
 
-import reorderObjects from "./assets/reorder-objects.gif";
-import clickToAdd from "./assets/pb-click-to-add.gif";
+import reorderObjects from "./assets/reorder-objects.mp4";
+import clickToAdd from "./assets/click-to-add.mp4";
 
 ## Headless CMS
 
@@ -13,7 +13,7 @@ import clickToAdd from "./assets/pb-click-to-add.gif";
 
 You can now reorder objects in Headless CMS UI, when creating content entries with lists of object fields. Sometimes it can be difficult to track were the record you're moving actually moved, so we also added a highlight to show you the exact position of the object.
 
-<Image src={reorderObjects} title={"Reorder Objects in a List"} />
+<Video src={reorderObjects} />
 
 ## Page Builder
 
@@ -21,7 +21,7 @@ You can now reorder objects in Headless CMS UI, when creating content entries wi
 
 This PR fixes an existing feature that was broken some time during migration to `recoil` state management. The feature allows you to activate a dropzone, and then simply click an element in the sidebar to insert, without using drag&drop.
 
-<Image src={clickToAdd} title={"Click to Add an Element"} />
+<Video src={clickToAdd} />
 
 ### Extract Editor Core ([#2536](https://github.com/webiny/webiny-js/pull/2536))
 
