add RMWC upgrade to changelog

--- a/src/docs/shared/release-notes/5.30.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.30.0/changelog.mdx
@@ -7,6 +7,12 @@ description: See what's new in Webiny version 5.30.0.
 import reorderObjects from "./assets/reorder-objects.mp4";
 import clickToAdd from "./assets/click-to-add.mp4";
 
+## Admin Area
+
+### Upgrade to RMWC v7 ([#2553](https://github.com/webiny/webiny-js/pull/2553))
+
+Webiny uses https://rmwc.io/ as a UI library. For a long time, we were stuck at v5, for various reasons. We're happy to announce that we've finally upgraded to RMWC v7. This will allow us to finally upgrade our React to v17, and maybe even v18, in the upcoming releases.
+
 ## Headless CMS
 
 ### Enable Object Reordering ([#2542](https://github.com/webiny/webiny-js/pull/2542))
