--- a/src/docs/5.28.x/infrastructure/basics/build-and-deploy-hooks.mdx
+++ b/src/docs/5.28.x/infrastructure/basics/build-and-deploy-hooks.mdx
@@ -4,6 +4,7 @@ description: Learn how to hook onto key lifecycle events of the "webiny deploy" 
 ---
 
 import { Alert } from "@/components/Alert"
+import deployPhases from "./assets/build-and-deploy-hooks/webiny_deploy_phases.png";
 
 <Alert type="info" title="Can I Use This?">
 
@@ -41,7 +42,7 @@ This is why the [`webiny deploy`](/docs/{version}/how-to-guides/deployment/deplo
 
 The following diagram shows in which order these lifecycle events are triggered:
 
-![webiny deploy Command's Lifecycle Events](./assets/build-and-deploy-hooks/webiny_deploy_phases.png)
+<Image src={deployPhases} title="webiny deploy Command's Lifecycle Events" shadow={false}/>
 
 We can hook onto any of these events via a dedicated plugin type, which we cover in the following section.
 
