Changes based on Adrian's feedback

--- a/src/docs/5.30.x/wcp/link-a-project.mdx
+++ b/src/docs/5.30.x/wcp/link-a-project.mdx
@@ -1,5 +1,5 @@
 ---
-title: Link a project
+title: Link a Project
 description: Learn how to connect your Webiny CMS project to Webiny Control Panel
 ---
 
@@ -13,8 +13,8 @@ Webiny Control Panel ("WCP") is currently in a private Alpha release. If you wis
 
 <Alert type="success" title="What you'll learn">
 
-- why you need to register your project with WCP
-- steps to register your project with WCP
+- why you need to link your project with WCP
+- steps to link your project with WCP
 
 </Alert>
 
@@ -32,7 +32,7 @@ When you install Webiny CMS, by default, it's managed as an Open-Source instance
 
 Any developer working on your Webiny CMS project that requires to build and run Webiny CMS inside their personal development environment will need to have a WCP accout and be assigned to your WCP project.
 
-To invite a person to a WCP project, a sure with `owner` rights has the perform the following actions. Inside the WCP project navigate to the `Team Members` tab:
+To invite a team member to a WCP project, a user with `owner` rights has to perform the following actions. Inside the WCP project navigate to the **Team Members** tab:
 
 ![WCP - Invite team member - Step 1](./assets/link-a-project/invite-team-member-step1.png)
 
@@ -76,21 +76,27 @@ Type in your username and password and you should see a success message in your 
 
 ![WCP - Link project inside personal development environment - Step 2](./assets/link-a-project/link-personal-step2.png)
 
-At that point you can return back to your terminal, and you'll see another success message in there as well: 
+You can now return back to your terminal, and you'll see another success message in there as well: 
 
 ![WCP - Link project inside personal development environment - Step 3](./assets/link-a-project/link-personal-step3.png)
 
 At this point your Webiny CMS project is linked to WCP, now you just need to link it to a specific WCP Project so the license can be retrieved. To do that, run the following command which will display a list of all the WCP projects you have access to:
 
 ```shell
-yarn webiny project init
+yarn webiny project link
 ```
 
 And all it's left to do is to select a project from the list. **Note**: if you have access to only one WCP project, the command will automatically link you to that one.
 
 ![WCP - Link project inside personal development environment - Step 4](./assets/link-a-project/link-personal-step4.png)
 
-Once you select your project, you are pretty much done, all you need to do, is to deploy it. 
+Once you select your project, you are pretty much done, all you need to do, is to [deploy it](/docs/core-development-concepts/basics/project-deployment). 
+
+<Alert type="info" title="Project already defined">
+
+If the project owner previously linked the project, the `id` of the project will already be present in the root `webiny.project.ts` file, meaning other users don't need to link the project themselves here. Once they're logged in, they're good to go.
+
+</Alert>
 
 ### CI/CD Environment 
 
@@ -110,6 +116,6 @@ With this the project inside your CI/CD pipeline will automatically retrieve the
 
 <Alert type="warning" title="Don't share API keys between environments">
 
-Each CI/CD enviroment must have its own `API key`. Sharing keys will between environments will cause WCP to record your monitoring data incorrectly and certain environments might run into API call limits where they shouldn't. Read more about the limits [here](./overview).
+Each CI/CD enviroment must have its own `API key`. Sharing keys between environments will cause WCP to record your monitoring data incorrectly and certain environments might run into API call limits where they shouldn't. Read more about the limits [here](./overview).
 
 </Alert>
