wip: add storing code

--- a/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
+++ b/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
@@ -139,10 +139,10 @@ const handler = createHandler({
       createEventHandler(async({request, reply, event, context, lambdaContext}) => {
           // "context" variable is the same as in our system - of course, if you loaded all the plugins as we do
           // because it is an sqs event, you know the type of the "event" variable and you can handle it from there
-
           const result = await someHeavyCalculation(event);
           
           // maybe store that result into the database?
+          await storeResult(result);
       })
   ]
 })
