--- a/src/docs/5.30.x/wcp/overview.mdx
+++ b/src/docs/5.30.x/wcp/overview.mdx
@@ -59,7 +59,7 @@ A license is retrieved by [linking your WCP project to your Webiny CMS instance]
 
 In practice, a project usually is deployed into many environments, the enviroment is `production`, but often times there are additional envionments like `development`, `qa`, `staging` and so on. Each enviroment has it's own Webiny CMS instance. Also, each developer working on a project will often times run a personal development enviroment with an instance of their own, or in some cases they might have multiple of these. 
 
-WCP allows you to link a single license to as many long-lived environments (`production`, `development`, ...), which we call CI/CD environments, as you  require. In addition to that, a WCP user, who is often times also a developer working on the project, they can have as many personal development environments as they need, and can link the same license. The license quotas are per-environment.  For example, if you have a license with 10 user seats, and you have 5 personal development environments and 3 long-lived CI/CD environments, each of these Webiny CMS instance can have a maximum od 10 user seats individually. 
+WCP allows you to link a single license to as many long-lived environments (`production`, `development`, ...), which we call CI/CD environments, as you  require. In addition to that, a WCP user, who is often times also a developer working on the project, they can have as many personal development environments as they need, and can link the same license. The license quotas are per-environment.  For example, if you have a license with 10 user seats, and you have 5 personal development environments and 3 long-lived CI/CD environments, each of these Webiny CMS instance can have a maximum of 10 user seats individually. 
 
 ### WCP Users
 
