--- a/src/docs/shared/release-notes/5.31.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.31.0/changelog.mdx
@@ -8,3 +8,12 @@ description: See what's new in Webiny version 5.31.0.
 ## Development
 
 ### Core
+
+#### Fastify [#2546](https://github.com/webiny/webiny-js/pull/2546)
+Starting with this version we implemented [Fastify](https://www.fastify.io/) to handle requests towards our system.
+To find out more about it, read our [Routes And Events](/docs/core-development-concepts/basics/routes-and-events) article.
+
+#### New Base Package For API Code [#2546](https://github.com/webiny/webiny-js/pull/2546)
+There is a new package [`@webiny/api`](https://github.com/webiny/webiny-js/tree/8d258aa2ebd8562b79e395d7aeea6316405f7f4e/packages/api), which is a base for all of the `@webiny/api-*` packages that use the `Context` and `ContextPlugin`.
+
+If you imported `Context` interface or `ContextPlugin` from the old `@webiny/handler` package, it is still there, so no need to change anything.
