refactor: routes and events description

--- a/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
+++ b/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
@@ -1,6 +1,6 @@
 ---
 title: Routes And Events
-description: You will learn about new handlers for routes and how to add new routes.
+description: You will learn about new handlers for routes and events and how to add new routes and event definitions.
 ---
 
 import { Alert } from "@/components/Alert";
