refactor: remove unnecessary changelog part

--- a/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
+++ b/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
@@ -41,7 +41,7 @@ The new `@webiny/handler` package does not know how to handle incoming Lambda re
 Well, the API Gateway handler and the Raw handler are actually only ones that are really required. Others are here to help with typings and some checks.
 
 #### API Gateway Handler
-This handler uses [@fastify/aws-lambda](https://github.com/fastify/aws-lambda-fastify) in the background to handle API Gateway events. It transforms [APIGatewayEvent](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/aws-lambda/trigger/api-gateway-proxy.d.ts#L60) event into the request which `fastify` understands, and it is then used throughout the system.
+This handler uses [@fastify/aws-lambda](https://github.com/fastify/aws-lambda-fastify) in the background to handle API Gateway events. It transforms [APIGatewayEvent](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/aws-lambda/trigger/api-gateway-proxy.d.ts#L60) into the request which `fastify` understands, and it is then used throughout the system.
 
 For this handler to work it requires at least one [RoutePlugin](https://github.com/webiny/webiny-js/blob/754c402e5df49ffb4cd07f8c53574ebe5e125f04/packages/handler/src/plugins/RoutePlugin.ts) to be initialized. It always returns [LambdaResponse](https://github.com/fastify/aws-lambda-fastify/blob/master/index.d.ts#L13) defined in the `@fastify/aws-lambda` package.
 
@@ -191,6 +191,10 @@ export const handler = createHandler({
 
 <Alert type="warning">
   Security checks will be done as on the <strong>/graphql</strong> endpoint. If you need customizations, feel free to add them.
+</Alert>
+
+<Alert type="danger">
+  Routes can be added only when initializing the handler.
 </Alert>
 
 ## Adding Event Handler
