--- a/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
+++ b/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
@@ -1,5 +1,5 @@
 ---
-title: Routes And Events
+title: Routes and Events
 description: You will learn about new handlers for routes and events and how to add new routes and event definitions.
 ---
 
