--- a/src/docs/shared/release-notes/5.31.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.31.0/changelog.mdx
@@ -14,7 +14,7 @@ With this version we implemented [Fastify](https://www.fastify.io/) to handle re
 
 This is a core change which will help us later with refactoring the system to use one Lambda for all the GraphQL requests, that are going towards our system.
 
-To find out more about it, read our [Routes And Events](/docs/core-development-concepts/basics/routes-and-events) article.
+To find out more about it, read our [Routes and Events](/docs/core-development-concepts/basics/routes-and-events) article.
 
 
 ...stay tuned.
